# snoo

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml
snoo/: __init__.py  client.py
src/snoo/: client.py
tests/: test_snoo.py
