[tool.black]
line-length = 88
target_version = ['py37']

[tool.flake8]
max-line-length = 99

[tool.poetry]
name = "snoo"
version = "0.3.0"
description = "Wrapper around the (undocumented) SNOO Smart Bassinet API"
authors = ["Manuel Ebert <manuel@1450.me>"]
readme = "README.md"
homepage = "https://github.com/maebert/snoo"
repository = "https://github.com/maebert/snoo"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22.0"
arrow = "^0.15.4"
pyxdg = "^0.26"

[tool.poetry.dev-dependencies]
pytest = "^4.5"
black = "^19.10b0"
flake8 = "^3.7.9"

[tool.poetry.scripts]
snoo = "snoo:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

